# Inzam-XCPC-Code

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MK  PrePush.sh  README.md  a.out  clean.py  in.csv  package-lock.json  package.json  readme.md  try.sh  vercel.json
Cmp/: Cmp.cpp  Data.cpp  My.cpp  Std.cpp
Codeforces/: README.md
ComputerNNet/: multi_pro_basic  multi_pro_basic.c  td2.txt
Everyday-is-PI-Day/: main.py
HDU/: 1166.cpp  2089.cpp  3183.cpp  HDU1166.cpp  HDU3183.cpp
IEEEXtreme/: DreamTeam.cpp  Encryppted.cpp  Language.cpp  Pipeline.cpp  TravelService.cpp
LOJ/: 10091.cpp  10147.cpp
Lanqiao/: 10.cpp  5.cpp  5.in  6.cpp  8.cpp  9.cpp  data.cpp
Leetcode/: 2302.cpp  A.cpp
Luogu/: MK  P1005.cpp  P1880.cpp  P3368.cpp  P3369.cpp  P3372.cpp  P3373.cpp  P3374.cpp  P3384.cpp  P3391.cpp  P3402.cpp  P3834.cpp  P3919.cpp  P4767.cpp  P5357.cpp  P5906.cpp  T240738.cpp  T241655.cpp
Lutece/: 1000.cpp  1256.cpp  1264.cpp  1513.cpp  1521.cpp  158.cpp  2360.cpp  2361.cpp  2362.cpp  2363.cpp  24.cpp  2402.cpp  2409.cpp  2427.cpp  2430.cpp  2431.cpp  2440.cpp  25.cpp  2523.cpp  2525.cpp  2526.cpp  2527.cpp  2532.cpp  2534.cpp  2535.cpp  2538.cpp  2542.cpp  2543.cpp  2550.cpp  2553.cpp  2554.cpp  2555.cpp  2558.cpp  2559.cpp  2561.cpp  2562.cpp  2563.cpp  2566.cpp  2568.cpp  2570.cpp  (+22 more)
POJ/: POJ3468.cpp
SPOJ/: 3267.cpp  4882.cpp
Template/: ACAutoMachine.cpp  AhoCorasickAlgorithm.cpp  DijkstraPriQueue.cpp  FenwickTree.cpp  MaxFlow.cpp  MinCostMaxFlow.cpp  PersistentArray.cpp  RectangleTree.cpp  SBT.cpp  SegmentTree.cpp  Splay.cpp  gar.cpp  kmp.cpp  print.md
(+816 files in other folders)
